# pyscript-stubs

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
build_scripts/: build_stubs.py
build_scripts/templates/: event_types.pyi
src/pyscript/: __init__.pyi  display.pyi  event_handling.pyi  magic_js.pyi  util.pyi
src/pyscript/types/: .gitignore  __init__.pyi  mime_types.pyi
src/pyweb/: pydom.pyi
